WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
255318
[Cocoa] Fix the WebGPU build again
https://bugs.webkit.org/show_bug.cgi?id=255318
Summary
[Cocoa] Fix the WebGPU build again
Myles C. Maxfield
Reported
2023-04-11 22:23:16 PDT
[Cocoa] Fix the WebGPU build again
Attachments
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2023-04-11 22:23:40 PDT
<
rdar://problem/107920935
>
Myles C. Maxfield
Comment 2
2023-04-11 22:24:45 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/12640
EWS
Comment 3
2023-04-11 22:27:19 PDT
Committed
262859@main
(351f254bb598): <
https://commits.webkit.org/262859@main
> Reviewed commits have been landed. Closing PR #12640 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug