[Cocoa] Fix the WebGPU build again https://bugs.webkit.org/show_bug.cgi?id=255318 rdar://107920935

Unreviewed build fix.

* Source/WTF/wtf/PlatformUse.h:
* Source/WebGPU/WebGPU/BindGroupLayout.mm:
(WebGPU::createArgumentDescriptor):

Canonical link: https://commits.webkit.org/262859@main